tslib 1.13 - tba
================================

This release includes the following bugfixes:
* 18dfd8b remove build dependency on pkg-config
* f10104e configure.ac: add GNU/kFreeBSD to build config


tslib 1.12 - released 2017-08-29
================================

This release includes libts version 0.7.2 and the following changes:
* Generate a tracking ID value for multitouch type A devices
* Add experimental `--with-sdl2` configuration option for `ts_calibrate` and `ts_test_mt`

This release includes the following bugfixes:
* 74f527e configure.ac: fix help text by defining only one default configuration


tslib 1.11 - released 2017-06-06
================================

This release includes libts version 0.7.1 and the following changes:
* The graphical tools don't show TSLIB anymore, but Touchscreen instead.
* The graphical tools support rotating the screen 90, 180 and 270 degrees
* man page updates

This release includes the following bugfixes:
* ff8c7d9 use dlfcn.h dynamic loading function only if libdl is available
* d39d358 input-raw: fix multitouch devices without BTN_TOUCH


tslib 1.10 - released 2017-05-12
================================

This release includes libts version 0.7.0 and the following changes:
* new `ts_libversion()` API and TSLIB_VERSION_MT definition
  This offers seamless integration for apps that don't know tslib's version
* new `module_raw dmc_dus3000` for DMC DUS Series touch screen via UART
* Fixed and improved statically linked building

This release includes the following bugfixes:
* c03f7c9 tools: ts_uinput_start.sh: fix usage of ts_uinput -d -v
* 47e7ab5 input-raw: Fix wrong first slot values by using calloc instead of malloc
* 7c5b4f8 plugins: filters: check for read_mt() availability
* e684df5 call ops->fini() only when implemented by the plugin
* 0ca9580 ts_close: free tslib_module_info when fini() is not implemented
* 5974266 median: read_mt: mark all-zero samples invalid


tslib 1.9 - released 2017-04-21