@@ -20,4 +20,6 @@ dist_man_MANS = \
 	ts_libversion.3 \
 	ts_verify.1 \
 	ts_fd.3 \
-	ts_error_fn.3
+	ts_error_fn.3 \
+	ts_open_restricted.3 \
+	ts_close_restricted.3
