@@ -1,0 +1,53 @@
+.\" Copyright (c) 2017, Martin Kepplinger <martink@posteo.de>
+.\"
+.\" %%%LICENSE_START(GPLv2+_DOC_FULL)
+.\" This is free documentation; you can redistribute it and/or
+.\" modify it under the terms of the GNU General Public License as
+.\" published by the Free Software Foundation; either version 2 of
+.\" the License, or (at your option) any later version.
+.\"
+.\" The GNU General Public License's references to "object code"
+.\" and "executables" are to be interpreted as the output of any
+.\" document formatting or typesetting system, including
+.\" intermediate and printed output.
+.\"
+.\" This manual is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public
+.\" License along with this manual; if not, see
+.\" <http://www.gnu.org/licenses/>.
+.\" %%%LICENSE_END
+.\"
+.TH TS_CLOSE_RESTRICTED 3  "" "" "tslib"
+.SH NAME
+ts_close_restricted \- use a custom function for closing the touchscreen's
+input device file
+.SH SYNOPSIS
+.nf
+.B #include <tslib.h>
+.sp
+.BI "void (*ts_close_restricted)(int fd, void *user_data);
+.sp
+.fi
+
+.SH DESCRIPTION
+.BR ts_close_restricted ()
+is useful if libts should not be run as root. If such a function is implemented
+by the user and assigned to the ts_close_restricted pointer, it will be called
+by ts_close() instead of the close() system call directly.
+
+It should obviously close the device with file descriptor
+.BR fd
+while
+.BR user_data
+is currently unused.
+
+.SH SEE ALSO
+.BR ts_open_restricted (3),
+.BR ts_open (3),
+.BR ts_setup (3),
+.BR ts_close (3),
+.BR ts.conf (5)
