@@ -1,6 +1,9 @@
 tslib 1.13 - tba
 ================================
 
+This release includes libts version 0.8.0 and the following changes:
+* Add ts_open_restricted() and ts_close_restricted() API
+
 This release includes the following bugfixes:
 * 18dfd8b remove build dependency on pkg-config
 * f10104e configure.ac: add GNU/kFreeBSD to build config
